Add Auth header to client calls.